kube/alrest/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - port: 80
      targetPort: 1411
      name: http
